namespace DesignPatterns.Creational.Abstract_Factory
{
    interface IAbstractProductA
    {
        void PrintProductName();
    }
}
