namespace DesignPatterns.Creational.Abstract_Factory
{
    interface IAbstractProductB
    {
        void PrintProductName();
    }
}
