using System;

namespace DesignPatterns.Creational.Abstract_Factory
{
    class ProductA1 : IAbstractProductA
    {
        public void PrintProductName()
        {
            Console.WriteLine("ProductA1");
        }
    }
}
