using System;

namespace DesignPatterns.Creational.Abstract_Factory
{
    class ProductA2 : IAbstractProductA
    {
        public void PrintProductName()
        {
            Console.WriteLine("ProductA2");
        }
    }
}
