using System;

namespace DesignPatterns.Creational.Abstract_Factory
{
    class ProductB1 : IAbstractProductB
    {
        public void PrintProductName()
        {
            Console.WriteLine("ProductB1");
        }
    }
}
