using System;

namespace DesignPatterns.Creational.Abstract_Factory
{
    class ProductB2 : IAbstractProductB
    {
        public void PrintProductName()
        {
            Console.WriteLine("ProductB2");
        }
    }
}
